--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 	<link rel="stylesheet" type="text/css" href="css/dark.css">
 	<link rel="stylesheet" type="text/css" href="css/colorblind.css">
 	<link rel="stylesheet" type="text/css" href="css/currencies.css">
-	<title>Progress Knight Quest</title>
+	<title>Progress Knight Quest Rebalanced</title>
 	<link rel="shortcut icon" href="img/logo.ico" />
 </head>
 <body id="body" class="dark" style="font-size: x-small">
 	<div class="w3-margin">
 		<div class="header">
 			<img src="img/logos.png" alt="logos" />
-			<h3>Progress Knight Quest</h3>
+			<h3>Progress Knight Quest Rebalanced</h3>
 		</div>
 		<div id="offline_progress" hidden="hidden" class="panel w3-margin-left">
 			<h2>
@@ -480,7 +480,7 @@
 													</span>
 												</div>
 												<i class="color-evil">
-													If you decide to embrace evil, all of your levels, coins and even max levels will be reset.
+													If you decide to embrace evil, all of your levels, coins and even a percentage of your max levels will be reset.
 													You will be reborn as a fresh slate. However, you will unlock a new line of skills and gain
 													<b><span id="evilGainDisplay"></span> evil</b>, which will heavily impact your future lives.
 												</i>
