max level reset on embrace evil changed to 10%

--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
 													</span>
 												</div>
 												<i class="color-evil">
-													If you decide to embrace evil, all of your levels, coins and even a percentage of your max levels will be reset.
+													If you decide to embrace evil, all of your levels, coins and <b><span id="evilMaxLevelMultiplierDisplay"></span> %</b> of your max levels will be reset.
 													You will be reborn as a fresh slate. However, you will unlock a new line of skills and gain
 													<b><span id="evilGainDisplay"></span> evil</b>, which will heavily impact your future lives.
 												</i>
